- Adds basic styling for Navigation.

--- a/public/styles/myStyles.css
+++ b/public/styles/myStyles.css
@@ -12,6 +12,10 @@
       margin-bottom: 50px;
   }
   
+  body > .container {
+      padding-top: 60px;
+  }
+  
   .padded {
       padding-top: 30px
   }
